Bringing current with minor updates

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta charset="utf-8"/>
 	<meta name="author" content="Matt Everson of Astuteo, LLC – https://www.astuteo.com/slickmap" />
 	<title>SlickMap CSS</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="slickmap.css" />
@@ -14,14 +15,14 @@
 		<h1>Project Title</h1>
 		<h2>Preliminary Site Map &mdash; Version 1.0</h2>
 
-		<ul id="utilityNav">
+		<ul class="utilityNav">
 			<li><a href="/register">Register</a></li>
 			<li><a href="/login">Log In</a></li>
 			<li><a href="/sitemap">Site Map</a></li>
 		</ul>
 
-		<ul id="primaryNav" class="col4">
-			<li id="home"><a href="http://sitetitle.com">Home</a></li>
+		<ul class="primaryNav columns-4" >
+			<li class="primaryNav__home"><a href="http://sitetitle.com">Home</a></li>
 			<li><a href="/about">About Us</a>
 				<ul>
 					<li><a href="/history">Our History</a></li>
