ADD: Utility nav back in

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 	<div class="sitemap">
 
-		<!-- <h1>Project Title</h1>
-		<h2>Preliminary Site Map &mdash; Version 1.0</h2> -->
+		<h1>Project Title</h1>
+		<h2><a href="">https://www.projecturl.com</a></h2>
 
-		<!-- <ul class="utilityNav">
+		<ul class="utilityNav">
 			<li><a href="/register">Register</a></li>
 			<li><a href="/login">Log In</a></li>
-			<li><a href="/sitemap">Site Map</a></li>
-		</ul> -->
+			<li><a href="/search">Search</a></li>
+		</ul>
 
 		<nav class="primaryNav">
 			<ul>
