--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	<div class="sitemap">
 
-		<h1>Project Title</h1>
-		<h2><a href="">https://www.projecturl.com</a></h2>
+		<!-- <h1>Project Title</h1>
+		<h2><a href="">https://www.projecturl.com</a></h2> -->
 
 		<ul class="utilityNav">
 			<li><a href="/register">Register</a></li>
@@ -23,7 +23,7 @@
 
 		<nav class="primaryNav">
 			<ul>
-				<!-- <li id="home"><a href="http://sitetitle.com">Home</a></li> -->
+				<li id="home"><a href="http://sitetitle.com">Home</a></li>
 				<li><a href="/about">About Us</a>
 					<ul>
 						<li><a href="/history">Our History</a></li>
@@ -67,6 +67,7 @@
 						</li>
 					</ul>
 				</li>
+
 			</ul>
 		</nav>
 
