--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="author" content="Matt Everson of Astuteo, LLC – https://www.astuteo.com/slickmap" />
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<title>SlickMap CSS</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="./slickmap.css" />
 </head>
@@ -35,7 +37,7 @@
 					<ul>
 						<li><a href="/services/design">Graphic Design</a></li>
 						<li><a href="/services/development">Web Development</a></li>
-						<li><a href="/services/marketing">Internet Marketing</a>
+						<li><a href="/services/marketing">Internet Marketing </a>
 							<ul>
 								<li><a href="/social-media">Social Media</a></li>
 								<li><a href="/optimization">Search Optimization</a></li>
@@ -67,8 +69,8 @@
 						</li>
 					</ul>
 				</li>
-
 			</ul>
+
 		</nav>
 
 	</div> <!-- end sitemap -->
