--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 					<ul>
 						<li><a href="/contact/offices">Offices</a>
 							<ul>
-								<li><a href="contact/form">Contact Form</a>
+								<li><a href="/contact/form">Contact Form</a>
 									<ul>
 										<li><a href="/contact/quote">Request Quote</a></li>
 										<li><a href="/contact/suppliers">Supplier Information</a></li>
 										<li><a href="/contact/media">Media Relations</a></li>
 									</ul>
 								</li>
-								<li><a href="contact/map">Locations</a></li>
+								<li><a href="/contact/map">Locations</a></li>
 							</ul>
 						</li>
 					</ul>
