FIX: Minor consistency issues

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 	<div class="sitemap">
 
-		<ul class="utilityNav">
-			<li><a href="/register">Register</a></li>
-			<li><a href="/login">Log In</a></li>
-			<li><a href="/search">Search</a></li>
-		</ul>
+		<nav class="utilityNav">
+			<ul>
+				<li><a href="/register">Register</a></li>
+				<li><a href="/login">Log In</a></li>
+				<li><a href="/search">Search</a></li>
+			</ul>
+		</nav>
 
 		<nav class="primaryNav">
 			<ul>
