--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Matt Everson of Astuteo, LLC – https://www.astuteo.com/slickmap" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-	<title>SlickMap CSS</title>
+	<title>Happy Go! UX Project - Table of Content</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="./slickmap.css" />
 </head>
 
@@ -16,69 +16,11 @@
 
 		<nav class="utilityNav">
 			<ul>
-				<li><a href="/register">Register</a></li>
-				<li><a href="/login">Log In</a></li>
-				<li><a href="/search">Search</a></li>
+				<li><a href="Shin-Kong-Mitsukoshi-Gourment-Map.html">SKM Gourment Map</a></li>
+				<li><a href="yahoo-table-sitemap.html">Yahoo Table</a></li>
+				<li><a href="happy-go-eats-sitemap.html">Happy Go Eats</a></li>
 			</ul>
 		</nav>
-
-		<nav class="primaryNav">
-			<ul>
-				<li id="home"><a href="http://sitetitle.com">Home</a></li>
-				<li><a href="/about">About Us</a>
-					<ul>
-						<li><a href="/history">Our History</a></li>
-						<li><a href="/mission">Mission Statement</a></li>
-						<li><a href="/principals">Principals</a></li>
-					</ul>
-				</li>
-				<li><a href="/services">Services</a>
-					<ul>
-						<li><a href="/services/design">Graphic Design</a></li>
-						<li><a href="/services/development">Web Development</a></li>
-						<li><a href="/services/marketing">Internet Marketing </a>
-							<ul>
-								<li><a href="/social-media">Social Media</a></li>
-								<li><a href="/optimization">Search Optimization</a></li>
-								<li><a href="/adwords">Google AdWords</a></li>
-							</ul>
-						</li>
-						<li><a href="/services/copywriting">Copywriting</a></li>
-						<li><a href="/services/photography">Photography</a></li>
-					</ul>
-				</li>
-				<li><a href="/projects">Projects</a>
-					<ul>
-						<li><a href="/projects/finance">Finance</a></li>
-						<li><a href="/projects/medical">Medical</a></li>
-						<li><a href="/projects/education">Education</a></li>
-						<li><a href="/projects/professional">Professional</a></li>
-						<li><a href="/projects/industrial">Industrial</a></li>
-						<li><a href="/projects/commercial">Commercial</a></li>
-						<li><a href="/projects/energy">Energy</a></li>
-					</ul>
-				</li>
-				<li><a href="/contact">Contact</a>
-					<ul>
-						<li><a href="/contact/offices">Offices</a>
-							<ul>
-								<li><a href="/contact/form">Contact Form</a>
-									<ul>
-										<li><a href="/contact/quote">Request Quote</a></li>
-										<li><a href="/contact/suppliers">Supplier Information</a></li>
-										<li><a href="/contact/media">Media Relations</a></li>
-									</ul>
-								</li>
-								<li><a href="/contact/map">Locations</a></li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-			</ul>
-
-		</nav>
-
-	</div> <!-- end sitemap -->
 
 </body>
 
