--- a/happy-go-eats-sitemap.html
+++ b/happy-go-eats-sitemap.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-	<title>Happy Go! - Sitemap</title>
+	<title>Happy Go Eats - Sitemap</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="./slickmap-happygo.css" />
 </head>
 
