--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="Matt Everson of Astuteo, LLC – https://www.astuteo.com/slickmap" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-	<title>Happy Go! UX Project - Table of Content</title>
+	<title>Happy Go Eats UX Excercise - Table of Content</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="./slickmap.css" />
 </head>
 
