--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<nav class="utilityNav">
 			<ul>
-				<li><a href="Shin-Kong-Mitsukoshi-Gourment-Map.html">SKM Gourment Map</a></li>
+				<li><a href="Shin-Kong-Mitsukoshi-Gourmet-Map.html">SKM Gourmet Map</a></li>
 				<li><a href="yahoo-table-sitemap.html">Yahoo Table</a></li>
 				<li><a href="happy-go-eats-sitemap.html">Happy Go Eats</a></li>
 			</ul>
