--- a/Shin-Kong-Mitsukoshi-Gourmet-Map.html
+++ b/Shin-Kong-Mitsukoshi-Gourmet-Map.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-	<title>SKM - Gourment Map</title>
+	<title>SKM - Gourmet Map</title>
 	<link rel="stylesheet" type="text/css" media="screen, print" href="./slickmap-skm.css" />
 </head>
 
