--- a/Shin-Kong-Mitsukoshi-Gourmet-Map.html
+++ b/Shin-Kong-Mitsukoshi-Gourmet-Map.html
@@ -17,24 +17,43 @@
 				<li id="home"><a href="Allow Location & Select Branch">SKM Landing Page</a></li>
 				<li><a href="">BOOKING or, EAT NOW!</a>
 					<ul>
-						<li><a href="w/ Booking tab opened">Restaurant Details</a></li>
-						<!-- <li><a href="#">#</a></li> -->
-						<li><a href="Log-in required">Booking Process</a></li>
-						<li><a href="SMS or Email Contains Link">Done!</a></li>
+						<li><a href="No. of Persons & When">Person & Date Filter</a></li>
+						<li><a href="Waiting, Lunch, Afternoon, Dinner tabs">Availability Filter</a></li>
+					  <li><a href="E.g. All, Chinese, Japanese, Korean">Menu Type Filter</a></li>
+						<li><a href="">List of Restaurants</a>
+							<ul>
+								<li><a href="w/ BOOKING tab open by default">Restaurant Details</a></li>
+								<li><a href="Log-in required">Booking Process</a></li>
+								<li><a href="SMS or Email Contains Link">Done!</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="">TAKEOUT</a>
 					<ul>
-						<li><a href="w/ Preorder tab opened">Restaurant Details</a></li>
-						<li><a href="Log-in required">Preorder Process</a></li>
-						<li><a href="SMS or Email Contains Link">Done!</a></li>
+						<li><a href="What time today / tomorrow / day-after">Time Filter</a></li>
+						<li><a href="Warning text">Additional Info</a></li>
+						<li><a href="E.g. All, Chinese, Japanese, Korean">Menu Type Filter</a></li>
+						<li><a href="">List of Restaurants</a>
+							<ul>
+								<li><a href="w/ TAKEOUT tab open by default">Restaurant Details</a></li>
+								<li><a href="Log-in required">Takeout Process</a></li>
+								<li><a href="SMS or Email Contains Link">Done!</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="">FLOOR GUIDE</a>
 					<ul>
-						<li><a href="w/ Booking tab opened">Restaurant Details</a></li>
+						<!-- <li><a href="w/ Booking tab opened">Restaurant Details</a></li>
 						<li><a href="Log-in required">Booking Process</a></li>
-						<li><a href="SMS or Email Contains Link">Done!</a></li>
+						<li><a href="SMS or Email Contains Link">Done!</a></li> -->
+						<li><a href="Cross Table Visual">Restaurants in Buildings & Floors</a></li>
+						<li><a href="Sorted by Floor in Descending order">List of Restaurants</a>
+							<ul>
+								<li><a href="w/ WAITING tab open by default">Restaurant Details</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="SKM Membership">LOG-IN</a>
