--- a/yahoo-table-sitemap.html
+++ b/yahoo-table-sitemap.html
@@ -15,30 +15,31 @@
 		<nav class="primaryNav">
 			<ul>
 				<li id="home"><a href="Toggle Between List-view & Map-view">Yahoo Table Landing Page</a></li>
-				<li><a href="">Campaign Banner</a></li>
-				<li><a href="Allow Location">Restaurants Around You</a>
+				<li><a href="Hero Banner & Quick Nav to List-view or map-view">Header</a></li>
+				<li><a href="w/ waiting info">Restaurants Around You</a>
 					<ul>
-						<li><a href="">Map-view</a></li>
-						<li><a href="">Restaurant Details</a>
+						<li><a href="">Restaurant Details</a></li>
 						<li><a href="">Booking Process</a></li>
 						<li><a href="SMS or Email Contains Link">Done!</a></li>
 					</ul>
 				</li>
 				<li><a href="Based on High Booking Freq.">Recommended Restaurants</a>
 					<ul>
-						<li><a href="">List-view</a></li>
-						<li><a href="">Restaurant Details</a>
+						<li><a href="">Restaurant Details</a></li>
 						<li><a href="">Booking Process</a></li>
 						<li><a href="SMS or Email Contains Link">Done!</a></li>
 					</ul>
 				</li>
-				<li><a href="">Michelin</a>
+				<li><a href="E.g. Thai style, dining pub, cafe, hotpot">Cuisine Types</a>
 					<ul>
-						<li><a href="w/ Michelin star filter">List-view</a>
-						<li><a href="">Restaurant Details</a>
+						<li><a href="">List-view</a></li>
+					</ul>
+				</li>
+				<li><a href="w/ special cuisine tag">Michelin</a>
+					<ul>
+						<li><a href="">Restaurant Details</a></li>
 						<li><a href="">Booking Process</a></li>
 						<li><a href="SMS or Email Contains Link">Done!</a></li>
-						</li>
 					</ul>
 				</li>
 			</ul>
